# ChangeLog for app-misc/razertool
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/razertool/ChangeLog,v 1.2 2008/08/28 19:12:17 voyageur Exp $

  28 Aug 2008; Bernard Cafarelli <voyageur@gentoo.org>
  razertool-0.0.7.ebuild:
  Add warning on older firmwares, icon and desktop entry. Thanks Lars
  <polynomial-C@gmx.de> in bug #235946

*razertool-0.0.7 (27 Aug 2008)

  27 Aug 2008; Bernard Cafarelli <voyageur@gentoo.org> +metadata.xml,
  +razertool-0.0.7.ebuild:
  Initial commit, thanks Paul Bredbury <brebs@sent.com> for the ebuild.
  Closes bug #144982
